Minutes of the Kickoff

--- a/documentation/minutes/20210303_kickoff.md
+++ b/documentation/minutes/20210303_kickoff.md
@@ -1,1 +1,61 @@
-[notes]
+#Kickoff
+Meeting Minutes
+
+## Design Brief
+
+
+## Roles
+
+We defined the project roles based on peoples interest for area of growth and interest, instead of building on established skills. 
+Based on prior knowledge and expertise, each team consists of a Lead, (Co-worker), and a Mentor. The mentor will be helping
+the team members with architecture, design, tooling or debugging questions.
+
+| Role      	| Lead     	| Co-worker 	| Mentor         	|
+|---------------|:---------:|:-------------:|:-----------------:|
+| Development 	| Akshay   	| Aiden    	    | Roni           	|
+| Art         	| Alain    	| Andi     	    | Akshay / Aiden 	|
+| Sound       	| Roni     	| -        	    | Andi           	|
+| Producer    	| Madlaina 	|          	    | Everyone       	|
+
+
+
+## Decisions
+- Game Graphics - Pixel Art and not in 3D
+- Development plattform - Unity3D
+- Work Method – Agile / Scrum, 2 Weeks Sprint with Sprint Review, Sprint Planning and Daily Standups
+- Issue & Sprint tracking - Github Repository
+- Virtual Offices on Discord (hop-in, hop-out)
+- Take regular breaks
+- Only work in the designated time-frame
+
+## Tasks
+- Everyone should familiarize by playing the emulated game
+- Teams will analyze different aspects of the game from their fields
+- The first sprint starts on the 17th of march, where we will create a backlog and do a sprint planning
+- Setup Github accounts, Unity and other work tools
+- Git crash course is recommended, see references below. Madlaina & roni could also do introductions to git
+
+
+## Open Questions
+**Pixel Perfect or Unity 2D Physics**
+Creating pixel perfect games with the Unity Engine 2D Editor can have several implications. Specifically it is required to
+setup your Unity Game for Retro 8bit games specifically (as described in a guide [here](https://blogs.unity3d.com/2019/03/13/2d-pixel-perfect-how-to-set-up-your-unity-project-for-retro-8-bits-games/)).
+This decision will impact the future potential adaptations that can be done in the game
+
+
+**Considerations adaptations**
+We discussed what aspects should be considered early in the development, to facilitate adaptations of the game mechanics and design.
+- Each team should identify these aspects while developing an understanding for the existing game
+- Keeping components modular and concerns separated
+
+
+**Workshops**
+- The idea was brought up, that there could be small expert workshops for introductions into the topics. This should 
+be organically organised / executed, also based on peoples interests.
+
+
+
+## References
+- Game Mechanics Schema [Miro Board](https://miro.com/app/board/o9J_lRDrrSc=/)
+- Github Repositories on the MA-GD21 [Group](https://github.com/MA-GD21); contact Madlaina for invites
+- Git Crash Course on [Udemy](https://www.udemy.com/course/git-and-github-crash-course-creating-a-repository-from-scratch/)
