Updating design brief & role descriptions

--- a/documentation/minutes/20210303_kickoff.md
+++ b/documentation/minutes/20210303_kickoff.md
@@ -17,6 +17,7 @@ the team members with architecture, design, tooling or debugging questions.
 | Sound       	| Roni     	| -        	    | Andi           	|
 | Producer    	| Madlaina 	|          	    | Everyone       	|
 
+Detailed role descriptions are documented on the [Admin Page](/documentation/admin.md#roles)
 
 
 ## Decisions
