Fixing references and links, signing off

--- a/documentation/minutes/20210303_kickoff.md
+++ b/documentation/minutes/20210303_kickoff.md
@@ -1,8 +1,8 @@
-#Kickoff
-Meeting Minutes
+# Kickoff Meeting Minutes
 
 ## Design Brief
 
+Réne and Mela were giving us the design brief and task for the course. Detailed description can be found on the [Admin Page](/documentation/admin.md#design-brief).
 
 ## Roles
 
@@ -17,7 +17,7 @@ the team members with architecture, design, tooling or debugging questions.
 | Sound       	| Roni     	| -        	    | Andi           	|
 | Producer    	| Madlaina 	|          	    | Everyone       	|
 
-Detailed role descriptions are documented on the [Admin Page](/documentation/admin.md#roles)
+Detailed role descriptions are documented on the [Admin Page](/documentation/admin.md#project-roles).
 
 
 ## Decisions
