--- a/documentation/minutes/20210303_kickoff.md
+++ b/documentation/minutes/20210303_kickoff.md
@@ -58,5 +58,6 @@ be organically organised / executed, also based on peoples interests.
 
 ## References
 - Game Mechanics Schema [Miro Board](https://miro.com/app/board/o9J_lRDrrSc=/)
+- Toobin Game Asset [Notes](https://docs.google.com/document/d/1BJtfKnPC4_5hoJvtQOA1T5PgcYd3Hbiu5uNMu4b-Ub8/edit)
 - Github Repositories on the MA-GD21 [Group](https://github.com/MA-GD21); contact Madlaina for invites
 - Git Crash Course on [Udemy](https://www.udemy.com/course/git-and-github-crash-course-creating-a-repository-from-scratch/)
